implement auth/sign-in handler, change storage GetUser method to GetUserByEmail
