# docs/swagger.yaml
@@ -1,11 +1,24 @@
 basePath: /api/v1
 definitions:
-  handler.response:
+  apihandler.response:
     properties:
       message:
         type: string
     type: object
-  handler.signUpInput:
+  apihandler.signInInput:
+    properties:
+      email:
+        maxLength: 64
+        type: string
+      password:
+        maxLength: 64
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  apihandler.signUpInput:
     properties:
       email:
         maxLength: 64
@@ -36,6 +49,11 @@ definitions:
     - password
     - surname
     type: object
+  apihandler.tokenResponse:
+    properties:
+      accessToken:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -44,40 +62,76 @@ info:
   title: Backend part of educational banking application
   version: "1.0"
 paths:
+  /auth/sign-in:
+    post:
+      consumes:
+      - application/json
+      description: Authorizes the user
+      parameters:
+      - description: sign in info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/apihandler.signInInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: user successfully authorized
+          schema:
+            $ref: '#/definitions/apihandler.tokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apihandler.response'
+        "401":
+          description: invalid login credentials
+          schema:
+            $ref: '#/definitions/apihandler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/apihandler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apihandler.response'
+      summary: Sign in
   /auth/sign-up:
     post:
       consumes:
       - application/json
-      description: register new user
+      description: Register new user
       parameters:
       - description: sign up info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.signUpInput'
+          $ref: '#/definitions/apihandler.signUpInput'
       produces:
       - application/json
       responses:
         "201":
           description: user successfully created
           schema:
-            $ref: '#/definitions/handler.response'
+            $ref: '#/definitions/apihandler.response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.response'
+            $ref: '#/definitions/apihandler.response'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/handler.response'
+            $ref: '#/definitions/apihandler.response'
         "409":
           description: user with such email already exists
           schema:
-            $ref: '#/definitions/handler.response'
+            $ref: '#/definitions/apihandler.response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.response'
+            $ref: '#/definitions/apihandler.response'
       summary: Sign up
 swagger: "2.0"
